apps/production/remark42/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remark42
  namespace: harrytang-prod
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: remark42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remark42
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: harrytang-prod
      labels:
        app: remark42
    spec:
      containers:
        - name: remark42
          image: umputun/remark42:v1.13.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: srvvar
              mountPath: /srv/var
            - name: email-templates-volume
              mountPath: /srv/email_confirmation_login.html.tmpl
              subPath: email_confirmation_login.html.tmpl
            - name: email-templates-volume
              mountPath: /srv/email_confirmation_subscription.html.tmpl
              subPath: email_confirmation_subscription.html.tmpl
            - name: email-templates-volume
              mountPath: /srv/email_reply.html.tmpl
              subPath: email_reply.html.tmpl
            - name: email-templates-volume
              mountPath: /srv/email_unsubscribe.html.tmpl
              subPath: email_unsubscribe.html.tmpl
            - name: email-templates-volume
              mountPath: /srv/error_response.html.tmpl
              subPath: error_response.html.tmpl
          securityContext:
            readOnlyRootFilesystem: false
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
          resources:
            requests:
              cpu: '100m'
              memory: '25Mi'
            limits:
              cpu: '1'
              memory: '1Gi'
      securityContext:
        # Has its own root privilege drop. Can't do runAsUser / runAsGroup.
      volumes:
        - name: srvvar
          persistentVolumeClaim:
            claimName: remark42
        - name: email-templates-volume
          configMap:
            name: email-templates
