apps/production/remark42/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: remark42-http
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-prod-remark42-http
  hostnames:
    - comment.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: remark42-https
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-prod-remark42-https
  hostnames:
    - comment.harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: remark42-srv
          port: 8080
